--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Color Matcher</title>
 <link rel="stylesheet" href="styles.css">
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" src="img/favicon.png">
 </head>
 <body>
     <div class="page">
@@ -16,7 +16,7 @@
         <button class="help-btn" title="Show Instructions">?</button>
 
         <div class="level-group">
-            <h2>Level1:</h2>
+            <h2>Level:</h2>
             <div class="level-bar">
                 <div class="lvl">1</div>
                 <div class="lvl">2</div>
