--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div class="hex-submit-row">
             <span class="hex-code">HEX: <span>#000000</span></span>
-            <button class="copy-btn" title="Copy HEX to Clipboard"><img src="/img/copy_icon.png"></button>
+            <button class="copy-btn" title="Copy HEX to Clipboard"><img src="img/copy_icon.png"></button>
             <button class="submit-btn">Submit</button>
         </div>
 
