--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="fenster kopf">
   <div class="title-row">
-    <h1>Color Matcher8</h1>
+    <h1>Color Matcher9</h1>
     <button class="help-btn" title="Show Instructions">?</button>
 
     <div class="level-group">
@@ -50,9 +50,9 @@
       <span class="hex-code">HEX: <span>#000000</span></span>
 
       <button class="copy-btn" title="Copy HEX to Clipboard">
-        <img class="icon icon-default" src="img/copy_icon.png" alt="">
-        <img class="icon icon-hover" src="img/copy_icon_white.png" alt="">
-      </button>
+  <img class="icon-default" src="img/copy_icon.png" alt="">
+  <img class="icon-hover" src="img/copy_icon_white.png" alt="">
+</button>
 
       <button class="submit-btn">Submit</button>
     </div>
